<resources>
    <string name="app_name">CampusExpense Manager</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="expense">Expense</string>
    <string name="budget">Budget</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create">Create</string>
    <string name="create_a_expense">Create a Expense</string>
    <string name="create_a_budget">Create a Budget</string>


    <string name="open_nav">Open CampusExpense Manager</string>
    <string name="close_nav">Close CampusExpense Manager</string>
    <string name="expenses">Expense</string>
</resources>