<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">

        <item android:id="@+id/nav_Home"
            android:title="@string/home"
            android:icon="@drawable/home_24dp"
            />
        <item android:id="@+id/nav_Expense"
            android:title="@string/expense"
            android:icon="@drawable/payments_24dp"
            />
        <item android:id="@+id/nav_Budget"
            android:icon="@drawable/savings_24dp"
            android:title="@string/budget"/>
        <item android:id="@+id/nav_Profile"
            android:title="@string/profile"
            android:icon="@drawable/account_circle_24dp"/>
    </group>
    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout_24dp"
                android:title="Logout"/>
        </menu>

    </item>

</menu>