<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialogbkg">

    <ImageView
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_remove_24"
        android:layout_gravity="center|top"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/createText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:text="@string/create"
            android:padding="8dp"
            android:textColor="@color/lavender"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp"
            android:textSize="25sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:src="@drawable/close_24dp"
            android:layout_marginStart="250dp"
            android:layout_marginTop="8dp"
            android:id="@+id/cancelButton"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/layoutExpense"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:src="@drawable/payments_24dp"/>

        <TextView
            android:id="@+id/addExpenses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_a_expense"
            android:textColor="@color/lavender"
            android:layout_marginStart="2dp"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutBudget"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">


        <ImageView
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:src="@drawable/savings_24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_a_budget"
            android:textColor="@color/lavender"
            android:layout_marginStart="2dp"
            android:textSize="16sp"/>

    </LinearLayout>

</LinearLayout>